// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package sql

import (
	"github.com/jackc/pgx/v5/pgtype"
)

// Each row is an app user (person)
type Appuser struct {
	ID int32
	// The user's display name
	DisplayName     string
	GoogleSub       string
	Email           string
	LoggingConsent  pgtype.Timestamptz
	AvatarUrl       pgtype.Text
	HasGdriveAccess bool
	AccessLevel     int32
}

// Language preference for each user
type AppuserLanguage struct {
	AppuserID  int32
	LanguageID int32
}

type FeatureFlag struct {
	Flag      string
	AppuserID int32
}

type File struct {
	ID                   int32
	Uuid                 string
	Creator              int32
	Created              pgtype.Timestamptz
	Accessibility        int32
	Filename             string
	Mimetype             string
	Size                 int64
	PresentationFilename string
	MiniaturesCreated    bool
	Sha256               []byte
}

type FilePatient struct {
	FileID    int32
	PatientID int32
}

type FileWiki struct {
	FileID int32
	WikiID int32
}

// Each row is a rehab home
type Home struct {
	ID       int32
	Name     string
	Capacity int32
	Note     string
}

// Each row associates an app user with a rehab home
type HomeAppuser struct {
	AppuserID int32
	HomeID    int32
}

type HomePreferredSpecy struct {
	HomeID    int32
	SpeciesID int32
	SortOrder pgtype.Int4
}

type HomeUnavailable struct {
	ID       int32
	HomeID   int32
	FromDate pgtype.Date
	ToDate   pgtype.Date
	Note     pgtype.Text
}

type ImageVariant struct {
	FileID   int32
	Variant  string
	Filename string
	Mimetype string
	Size     int32
	Width    int32
	Height   int32
	Sha256   []byte
}

type Invitation struct {
	ID          string
	Email       pgtype.Text
	Expires     pgtype.Timestamptz
	Created     pgtype.Timestamptz
	AccessLevel int32
	Home        pgtype.Int4
}

// Each row represents a patient
type Patient struct {
	ID                    int32
	SpeciesID             int32
	CurrHomeID            pgtype.Int4
	Name                  string
	Status                int32
	JournalUrl            pgtype.Text
	SortOrder             int32
	TimeCheckin           pgtype.Timestamptz
	TimeCheckout          pgtype.Timestamptz
	SuggestedJournalUrl   pgtype.Text
	SuggestedJournalTitle pgtype.Text
	JournalPending        bool
}

// Each row represents an event that has occurred to a specific patient
type PatientEvent struct {
	ID           int32
	PatientID    int32
	HomeID       int32
	Note         string
	EventID      int32
	Time         pgtype.Timestamptz
	AssociatedID pgtype.Int4
	AppuserID    int32
}

type Search struct {
	Ns            string
	Updated       pgtype.Timestamptz
	Header        pgtype.Text
	Body          pgtype.Text
	Lang          interface{}
	FtsHeader     interface{}
	FtsBody       interface{}
	AssociatedUrl pgtype.Text
	ExtraData     pgtype.Text
	Skipped       bool
	Created       pgtype.Timestamptz
}

type Session struct {
	ID        string
	AppuserID int32
	Expires   pgtype.Timestamptz
	LastSeen  pgtype.Timestamptz
	Csrf      pgtype.Text
}

// Each row is a species
type Species struct {
	ID int32
	// The scientific name for this species
	ScientificName string
}

// Internationalization for species
type SpeciesLanguage struct {
	SpeciesID  int32
	LanguageID int32
	// The name of the species in the given language
	Name string
}

type WikiPage struct {
	ID        int32
	SortOrder pgtype.Int4
	Title     string
	Created   pgtype.Timestamptz
	Creator   int32
}

type WikiRevision struct {
	ID      int32
	PageID  int32
	Content []byte
	Edited  pgtype.Timestamptz
	Editor  int32
}
